--- a/package.json
+++ b/package.json
@@ -18,28 +18,28 @@
     "eject": "react-scripts-ts eject"
   },
   "dependencies": {
-    "@types/react": "16.3.14",
-    "@types/react-redux": "5",
-    "@types/react-router-dom": "4.2.6",
-    "@types/react-router-redux": "5.0.14",
+    "@types/react": "^16.4.6",
+    "@types/react-redux": "^6.0.3",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/react-router-redux": "^5.0.15",
     "cuid": "2.1.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts-ts": "^2.13.0",
+    "react-scripts-ts": "^2.16.0",
     "redux": "4.0.0",
     "redux-observable": "1.0.0-alpha.2",
     "redux-saga": "^0.16.0",
     "reselect": "3.0.1",
     "rxjs": "6.1.0",
     "rxjs-compat": "6.1.0",
-    "tslib": "1.9.1",
-    "tslint": "5.10.0",
-    "tslint-react": "3.6.0",
+    "tslib": "^1.9.3",
+    "tslint": "^5.10.0",
+    "tslint-react": "^3.6.0",
     "typesafe-actions": "2.0.2",
-    "typescript": "2.8.3"
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.11",
@@ -49,6 +49,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.3.0",
-    "react-test-renderer": "^16.4.1"
+    "react-test-renderer": "^16.4.1",
+    "redux-saga-test-plan": "^3.7.0"
   }
 }
