--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.3",
     "@types/react-router-dom": "^4.2.7",
     "@types/react-router-redux": "^5.0.15",
@@ -30,11 +31,9 @@
     "react-router-redux": "5.0.0-alpha.9",
     "react-scripts-ts": "^2.16.0",
     "redux": "4.0.0",
-    "redux-observable": "1.0.0-alpha.2",
     "redux-saga": "^0.16.0",
     "reselect": "3.0.1",
-    "rxjs": "6.1.0",
-    "rxjs-compat": "6.1.0",
+    "styled-components": "^3.3.3",
     "tslib": "^1.9.3",
     "tslint": "^5.10.0",
     "tslint-react": "^3.6.0",
@@ -45,7 +44,6 @@
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.1.4",
-    "@types/react-dom": "^16.0.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.3.0",
